--- a/Day 7/fancy.html
+++ b/Day 7/fancy.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello i am ravi sdnakj</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel deleniti quasi quod labore rem aliquam atque non ipsum voluptates sapiente ea id aut aperiam magni temporibus alias maxime, optio et!</h1>
 </body>
 </html>
