--- a/Day 7/fancy.html
+++ b/Day 7/fancy.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel deleniti quasi quod labore rem aliquam atque non ipsum voluptates sapiente ea id aut aperiam magni temporibus alias maxime, optio et!</h1>
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel deleniti quasi quod labore rem aliquam atque non ipsum voluptates sapiente ea id aut aperiam magni temporibus alias maxime, optio et! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, libero vero sit numquam placeat blanditiis ducimus nobis non error eaque dolores deserunt harum, iure totam, recusandae cum laboriosam obcaecati dicta!</h1>
 </body>
 </html>
